<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp"
    android:layout_height="385dp"
    android:orientation="vertical"
    android:paddingTop="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/yellow_shape"
        android:orientation="vertical"
        android:paddingHorizontal="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/transfers"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/yellow_shape"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_shape"
                android:orientation="vertical"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/transfers_body"
                            android:textColor="@color/black"
                            android:textSize="17sp" />


                    </LinearLayout>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:text="@string/signature"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <EditText

                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:paddingVertical="1dp"
                        android:paddingHorizontal="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                </LinearLayout>


            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/save"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="#2B3856"
        android:textSize="15sp"
        android:background="@drawable/save_shape"/>



</LinearLayout>